...
                val user = userDao.getUserByUserName(uiState.userName)
                if (user != null && user.password == uiState.password) {
                    // Save login state
                    datastore.saveLoginState(isLoggedIn = true, userName = user.userName)
                    onSuccess()
                } else {
                    onError("Invalid username or password")
                }
            }
        } else {
            onError("Please fill in all fields correctly")
        }
    }
...
