...
    <string name="clear_text">Clear text</string>

    <!-- Registration Screen -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>


    <!-- User Settings -->
    <string name="dark_mode_status">Dark Mode: %1$s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
...
